[gd_scene load_steps=10 format=4 uid="uid://bsfmlosvitsc6"]

[ext_resource type="PackedScene" uid="uid://1ab614obq2t2" path="res://capy.tscn" id="1_jtlg3"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_rxmq3"]
[ext_resource type="Script" path="res://Scripts/platform.gd" id="3_a668m"]
[ext_resource type="Texture2D" uid="uid://boi7geoelerkw" path="res://Spritesheets/tileset.png" id="4_704dl"]
[ext_resource type="PackedScene" uid="uid://bjpki44xtcce4" path="res://obstacle.tscn" id="5_yhux1"]
[ext_resource type="Script" path="res://obstacle_spawner.gd" id="6_kqvcm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bcvx4"]
texture = ExtResource("4_704dl")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
2:2/0 = 0
3:2/0 = 0
2:3/0 = 0
3:3/0 = 0
2:4/0 = 0
3:4/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_uuh5w"]
sources/6 = SubResource("TileSetAtlasSource_bcvx4")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pyl34"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rxmq3")

[node name="Capy" parent="." instance=ExtResource("1_jtlg3")]
position = Vector2(265, 405)
scale = Vector2(6, 6)

[node name="SpawnLocation" type="Marker2D" parent="."]
position = Vector2(217, 405)

[node name="Platform" type="Node2D" parent="."]
position = Vector2(33, 451)
script = ExtResource("3_a668m")

[node name="Sprite" type="Sprite2D" parent="Platform"]
position = Vector2(927, 34)
scale = Vector2(1920, 74.85)

[node name="TileMapLayer" type="TileMapLayer" parent="Platform/Sprite"]
texture_filter = 1
position = Vector2(-0.15475, -0.507682)
scale = Vector2(0.001, 0.0534402)
tile_map_data = PackedByteArray("AAAEAAAABgADAAMAAAAFAAAABgACAAMAAAAGAAAABgACAAMAAAAHAAAABgADAAMAAAAIAAAABgADAAMAAAAJAAAABgADAAMAAAAKAAAABgADAAMAAAALAAAABgACAAMAAAACAAAABgADAAMAAAADAAAABgADAAMAAAD//wAABgADAAMAAAAAAAAABgADAAMAAAABAAAABgADAAMAAAAMAAAABgADAAMAAAANAAAABgADAAMAAAAOAAAABgADAAMAAAAPAAAABgADAAMAAAAQAAAABgADAAMAAAARAAAABgACAAMAAADr/wAABgADAAMAAADs/wAABgACAAMAAADt/wAABgACAAMAAADu/wAABgADAAMAAADv/wAABgADAAMAAADw/wAABgADAAMAAADx/wAABgACAAMAAADy/wAABgADAAMAAADz/wAABgADAAMAAAD0/wAABgACAAMAAAD3/wAABgADAAMAAAD4/wAABgADAAMAAAD5/wAABgACAAMAAAD6/wAABgADAAMAAAD7/wAABgADAAMAAAD8/wAABgADAAMAAAD9/wAABgACAAMAAAD+/wAABgADAAMAAADq/wAABgADAAMAAAASAAAABgACAAMAAAATAAAABgADAAMAAAAUAAAABgADAAMAAAAVAAAABgADAAMAAAAWAAAABgADAAMAAAAXAAAABgADAAMAAAAYAAAABgADAAMAAAAZAAAABgADAAMAAAAaAAAABgADAAMAAAAbAAAABgADAAMAAAAcAAAABgADAAMAAAAdAAAABgADAAMAAAAeAAAABgACAAMAAAAfAAAABgADAAMAAAAgAAAABgADAAMAAAAhAAAABgACAAMAAAAiAAAABgACAAMAAAAjAAAABgADAAMAAAAkAAAABgADAAMAAAAlAAAABgADAAMAAAAmAAAABgADAAMAAAAnAAAABgACAAMAAAAoAAAABgADAAMAAADq/wEABgADAAQAAADq/wIABgADAAQAAADr/wEABgADAAQAAADr/wIABgADAAQAAADs/wEABgACAAQAAADs/wIABgADAAQAAADt/wEABgACAAQAAADt/wIABgADAAQAAADu/wEABgADAAQAAADu/wIABgADAAQAAADv/wEABgADAAQAAADv/wIABgADAAQAAADw/wEABgADAAQAAADw/wIABgADAAQAAADx/wEABgACAAQAAADx/wIABgADAAQAAADy/wEABgADAAQAAADy/wIABgADAAQAAADz/wEABgADAAQAAADz/wIABgADAAQAAAD0/wEABgACAAQAAAD0/wIABgADAAQAAAD1/wEABgADAAQAAAD1/wIABgADAAQAAAD2/wEABgADAAQAAAD2/wIABgADAAQAAAD3/wEABgADAAQAAAD3/wIABgADAAQAAAD4/wEABgADAAQAAAD4/wIABgADAAQAAAD5/wEABgACAAQAAAD5/wIABgADAAQAAAD6/wEABgADAAQAAAD6/wIABgADAAQAAAD7/wEABgADAAQAAAD7/wIABgADAAQAAAD8/wEABgADAAQAAAD8/wIABgADAAQAAAD9/wEABgACAAQAAAD9/wIABgADAAQAAAD+/wEABgADAAQAAAD+/wIABgADAAQAAAD//wEABgADAAQAAAD//wIABgADAAQAAAAAAAEABgADAAQAAAAAAAIABgADAAQAAAABAAEABgADAAQAAAABAAIABgADAAQAAAACAAEABgADAAQAAAACAAIABgADAAQAAAADAAEABgADAAQAAAADAAIABgADAAQAAAAEAAEABgADAAQAAAAEAAIABgADAAQAAAAFAAEABgACAAQAAAAFAAIABgADAAQAAAAGAAEABgACAAQAAAAGAAIABgADAAQAAAAHAAEABgADAAQAAAAHAAIABgADAAQAAAAIAAEABgADAAQAAAAIAAIABgADAAQAAAAJAAEABgADAAQAAAAJAAIABgADAAQAAAAKAAEABgADAAQAAAAKAAIABgADAAQAAAALAAEABgACAAQAAAALAAIABgADAAQAAAAMAAEABgADAAQAAAAMAAIABgADAAQAAAANAAEABgADAAQAAAANAAIABgADAAQAAAAOAAEABgADAAQAAAAOAAIABgADAAQAAAAPAAEABgADAAQAAAAPAAIABgADAAQAAAAQAAEABgADAAQAAAAQAAIABgADAAQAAAARAAEABgACAAQAAAARAAIABgADAAQAAAASAAEABgACAAQAAAASAAIABgADAAQAAAATAAEABgADAAQAAAATAAIABgADAAQAAAAUAAEABgADAAQAAAAUAAIABgADAAQAAAAVAAEABgADAAQAAAAVAAIABgADAAQAAAAWAAEABgADAAQAAAAWAAIABgADAAQAAAAXAAEABgADAAQAAAAXAAIABgADAAQAAAAYAAEABgADAAQAAAAYAAIABgADAAQAAAAZAAEABgADAAQAAAAZAAIABgADAAQAAAAaAAEABgADAAQAAAAaAAIABgADAAQAAAAbAAEABgADAAQAAAAbAAIABgADAAQAAAAcAAEABgADAAQAAAAcAAIABgADAAQAAAAdAAEABgADAAQAAAAdAAIABgADAAQAAAAeAAEABgACAAQAAAAeAAIABgADAAQAAAAfAAEABgADAAQAAAAfAAIABgADAAQAAAAgAAEABgADAAQAAAAgAAIABgADAAQAAAAhAAEABgACAAQAAAAhAAIABgADAAQAAAAiAAEABgACAAQAAAAiAAIABgADAAQAAAAjAAEABgADAAQAAAAjAAIABgADAAQAAAAkAAEABgADAAQAAAAkAAIABgADAAQAAAAlAAEABgADAAQAAAAlAAIABgADAAQAAAAmAAEABgADAAQAAAAmAAIABgADAAQAAAAnAAEABgACAAQAAAAnAAIABgADAAQAAAAoAAEABgADAAQAAAAoAAIABgADAAQAAAD1/wAABgADAAMAAAD2/wAABgADAAMAAAD2////BgACAAIAAAAEAP//BgACAAIAAAAJAP//BgACAAIAAAAKAP//BgACAAIAAAAWAP//BgACAAIAAAAQAP//BgACAAIAAAAeAP//BgACAAIAAAAmAP//BgACAAIAAAAjAP//BgADAAIAAAATAP//BgADAAIAAAAGAP//BgADAAIAAAD6////BgADAAIAAAA=")
tile_set = SubResource("TileSet_uuh5w")

[node name="PlatformTip" type="Node2D" parent="Platform/Sprite"]
position = Vector2(0.5, -0.454)

[node name="Sprite2" type="Sprite2D" parent="Platform"]
position = Vector2(2861, 34)
scale = Vector2(1920, 74.85)
texture = SubResource("PlaceholderTexture2D_pyl34")

[node name="PlatformTip" type="Node2D" parent="Platform/Sprite2"]
position = Vector2(0.5, -0.454)

[node name="TileMapLayer2" type="TileMapLayer" parent="Platform/Sprite2"]
texture_filter = 1
position = Vector2(-0.154167, -0.507682)
scale = Vector2(0.001, 0.0534402)
tile_map_data = PackedByteArray("AAAEAAAABgADAAMAAAAFAAAABgACAAMAAAAGAAAABgACAAMAAAAHAAAABgADAAMAAAAIAAAABgADAAMAAAAJAAAABgADAAMAAAAKAAAABgADAAMAAAALAAAABgACAAMAAAACAAAABgADAAMAAAADAAAABgADAAMAAAD//wAABgADAAMAAAAAAAAABgADAAMAAAABAAAABgADAAMAAAAMAAAABgADAAMAAAANAAAABgADAAMAAAAOAAAABgADAAMAAAAPAAAABgADAAMAAAAQAAAABgADAAMAAAARAAAABgACAAMAAADr/wAABgADAAMAAADs/wAABgACAAMAAADt/wAABgACAAMAAADu/wAABgADAAMAAADv/wAABgADAAMAAADw/wAABgADAAMAAADx/wAABgACAAMAAADy/wAABgADAAMAAADz/wAABgADAAMAAAD0/wAABgACAAMAAAD3/wAABgADAAMAAAD4/wAABgADAAMAAAD5/wAABgACAAMAAAD6/wAABgADAAMAAAD7/wAABgADAAMAAAD8/wAABgADAAMAAAD9/wAABgACAAMAAAD+/wAABgADAAMAAADq/wAABgADAAMAAAASAAAABgACAAMAAAATAAAABgADAAMAAAAUAAAABgADAAMAAAAVAAAABgADAAMAAAAWAAAABgADAAMAAAAXAAAABgADAAMAAAAYAAAABgADAAMAAAAZAAAABgADAAMAAAAaAAAABgADAAMAAAAbAAAABgADAAMAAAAcAAAABgADAAMAAAAdAAAABgADAAMAAAAeAAAABgACAAMAAAAfAAAABgADAAMAAAAgAAAABgADAAMAAAAhAAAABgACAAMAAAAiAAAABgACAAMAAAAjAAAABgADAAMAAAAkAAAABgADAAMAAAAlAAAABgADAAMAAAAmAAAABgADAAMAAAAnAAAABgACAAMAAAAoAAAABgADAAMAAADq/wEABgADAAQAAADq/wIABgADAAQAAADr/wEABgADAAQAAADr/wIABgADAAQAAADs/wEABgACAAQAAADs/wIABgADAAQAAADt/wEABgACAAQAAADt/wIABgADAAQAAADu/wEABgADAAQAAADu/wIABgADAAQAAADv/wEABgADAAQAAADv/wIABgADAAQAAADw/wEABgADAAQAAADw/wIABgADAAQAAADx/wEABgACAAQAAADx/wIABgADAAQAAADy/wEABgADAAQAAADy/wIABgADAAQAAADz/wEABgADAAQAAADz/wIABgADAAQAAAD0/wEABgACAAQAAAD0/wIABgADAAQAAAD1/wEABgADAAQAAAD1/wIABgADAAQAAAD2/wEABgADAAQAAAD2/wIABgADAAQAAAD3/wEABgADAAQAAAD3/wIABgADAAQAAAD4/wEABgADAAQAAAD4/wIABgADAAQAAAD5/wEABgACAAQAAAD5/wIABgADAAQAAAD6/wEABgADAAQAAAD6/wIABgADAAQAAAD7/wEABgADAAQAAAD7/wIABgADAAQAAAD8/wEABgADAAQAAAD8/wIABgADAAQAAAD9/wEABgACAAQAAAD9/wIABgADAAQAAAD+/wEABgADAAQAAAD+/wIABgADAAQAAAD//wEABgADAAQAAAD//wIABgADAAQAAAAAAAEABgADAAQAAAAAAAIABgADAAQAAAABAAEABgADAAQAAAABAAIABgADAAQAAAACAAEABgADAAQAAAACAAIABgADAAQAAAADAAEABgADAAQAAAADAAIABgADAAQAAAAEAAEABgADAAQAAAAEAAIABgADAAQAAAAFAAEABgACAAQAAAAFAAIABgADAAQAAAAGAAEABgACAAQAAAAGAAIABgADAAQAAAAHAAEABgADAAQAAAAHAAIABgADAAQAAAAIAAEABgADAAQAAAAIAAIABgADAAQAAAAJAAEABgADAAQAAAAJAAIABgADAAQAAAAKAAEABgADAAQAAAAKAAIABgADAAQAAAALAAEABgACAAQAAAALAAIABgADAAQAAAAMAAEABgADAAQAAAAMAAIABgADAAQAAAANAAEABgADAAQAAAANAAIABgADAAQAAAAOAAEABgADAAQAAAAOAAIABgADAAQAAAAPAAEABgADAAQAAAAPAAIABgADAAQAAAAQAAEABgADAAQAAAAQAAIABgADAAQAAAARAAEABgACAAQAAAARAAIABgADAAQAAAASAAEABgACAAQAAAASAAIABgADAAQAAAATAAEABgADAAQAAAATAAIABgADAAQAAAAUAAEABgADAAQAAAAUAAIABgADAAQAAAAVAAEABgADAAQAAAAVAAIABgADAAQAAAAWAAEABgADAAQAAAAWAAIABgADAAQAAAAXAAEABgADAAQAAAAXAAIABgADAAQAAAAYAAEABgADAAQAAAAYAAIABgADAAQAAAAZAAEABgADAAQAAAAZAAIABgADAAQAAAAaAAEABgADAAQAAAAaAAIABgADAAQAAAAbAAEABgADAAQAAAAbAAIABgADAAQAAAAcAAEABgADAAQAAAAcAAIABgADAAQAAAAdAAEABgADAAQAAAAdAAIABgADAAQAAAAeAAEABgACAAQAAAAeAAIABgADAAQAAAAfAAEABgADAAQAAAAfAAIABgADAAQAAAAgAAEABgADAAQAAAAgAAIABgADAAQAAAAhAAEABgACAAQAAAAhAAIABgADAAQAAAAiAAEABgACAAQAAAAiAAIABgADAAQAAAAjAAEABgADAAQAAAAjAAIABgADAAQAAAAkAAEABgADAAQAAAAkAAIABgADAAQAAAAlAAEABgADAAQAAAAlAAIABgADAAQAAAAmAAEABgADAAQAAAAmAAIABgADAAQAAAAnAAEABgACAAQAAAAnAAIABgADAAQAAAAoAAEABgADAAQAAAAoAAIABgADAAQAAAD1/wAABgADAAMAAAD2/wAABgADAAMAAAD2////BgACAAIAAAAEAP//BgACAAIAAAAJAP//BgACAAIAAAAKAP//BgACAAIAAAAWAP//BgACAAIAAAAQAP//BgACAAIAAAAeAP//BgACAAIAAAAmAP//BgACAAIAAAAjAP//BgADAAIAAAATAP//BgADAAIAAAAGAP//BgADAAIAAAD6////BgADAAIAAAA=")
tile_set = SubResource("TileSet_uuh5w")

[node name="SpawnPosition" type="Marker2D" parent="Platform"]
position = Vector2(1887, 0)

[node name="EndPosition" type="Marker2D" parent="Platform"]
position = Vector2(-33, 0)

[node name="ObstacleSpawner" type="Node2D" parent="."]
position = Vector2(855, 425)
script = ExtResource("6_kqvcm")
obstacle_scene = ExtResource("5_yhux1")

[node name="SpawnTimer" type="Timer" parent="ObstacleSpawner"]
wait_time = 0.5

[connection signal="timeout" from="ObstacleSpawner/SpawnTimer" to="ObstacleSpawner" method="_on_spawn_timer_timeout"]
